--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,7 @@
 		<!-- Dependency modules -->
 		<appframeworkVersion>2.1</appframeworkVersion>
 		<calculationVersion>1.0</calculationVersion>
+		<groovyVersion>2.2.4</groovyVersion>
 		<htmlformentryVersion>2.2.1</htmlformentryVersion>
 		<htmlformentry19extVersion>1.4</htmlformentry19extVersion>
 		<htmlwidgetsVersion>1.6.5</htmlwidgetsVersion>
@@ -56,7 +57,6 @@
 		<uiframeworkVersion>3.1</uiframeworkVersion>
 
 		<!-- Additional distro modules -->
-		<groovyVersion>2.2.4</groovyVersion>
 		<kenyadqVersion>1.0-SNAPSHOT</kenyadqVersion>
 
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -78,6 +78,13 @@
 			<groupId>org.openmrs.module</groupId>
 			<artifactId>calculation-api</artifactId>
 			<version>${calculationVersion}</version>
+			<scope>provided</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>org.openmrs.module</groupId>
+			<artifactId>groovy-api</artifactId>
+			<version>${groovyVersion}</version>
 			<scope>provided</scope>
 		</dependency>
 
