Resolved all snapshot dependencies

--- a/pom.xml
+++ b/pom.xml
@@ -40,8 +40,8 @@
 		<htmlformentry19extVersion>1.4</htmlformentry19extVersion>
 		<htmlwidgetsVersion>1.6.5</htmlwidgetsVersion>
 		<idgenVersion>2.6</idgenVersion>
-		<kenyacoreVersion>2.0-SNAPSHOT</kenyacoreVersion>
-		<kenyauiVersion>2.0-SNAPSHOT</kenyauiVersion>
+		<kenyacoreVersion>2.0</kenyacoreVersion>
+		<kenyauiVersion>2.0</kenyauiVersion>
 		<logicVersion>0.5.2</logicVersion>
 		<metadatadeployVersion>1.1</metadatadeployVersion>
 		<metadatamappingVersion>1.0.1</metadatamappingVersion>
@@ -51,7 +51,7 @@
 		<uiframeworkVersion>3.1</uiframeworkVersion>
 
 		<!-- Additional distro modules -->
-		<kenyadqVersion>1.0-SNAPSHOT</kenyadqVersion>
+		<kenyadqVersion>1.0</kenyadqVersion>
 
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<maven.build.timestamp.format>yyyy-MM-dd'T'HH:mm:ssZ</maven.build.timestamp.format>
