--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 
 	<groupId>org.openmrs.module</groupId>
 	<artifactId>kenyaemr</artifactId>
-	<version>14.1-SNAPSHOT</version>
+	<version>14.1-RC1</version>
 
 	<packaging>pom</packaging>
 	<name>KenyaEMR</name>
@@ -18,7 +18,7 @@
 		<connection>scm:git:git@github.com:I-TECH/openmrs-module-kenyaemr.git</connection>
 		<developerConnection>scm:git:git@github.com:I-TECH/openmrs-module-kenyaemr.git</developerConnection>
 		<url>scm:git:git@github.com:I-TECH/openmrs-module-kenyaemr.git</url>
-	  <tag>HEAD</tag>
+	  <tag>14.1-RC1</tag>
   </scm>
 
 	<modules>
