--- a/omod/pom.xml
+++ b/omod/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>org.openmrs.module</groupId>
 		<artifactId>kenyaemr</artifactId>
-		<version>14.1-RC4</version>
+		<version>14.1-RC5-SNAPSHOT</version>
 	</parent>
 
 	<artifactId>kenyaemr-omod</artifactId>
