--- a/omod/pom.xml
+++ b/omod/pom.xml
@@ -155,6 +155,21 @@
 					</execution>
 				</executions>
 			</plugin>
+			<plugin>
+				<groupId>org.openmrs.maven.plugins</groupId>
+				<artifactId>distrotools-maven-plugin</artifactId>
+				<executions>
+					<execution>
+						<phase>validate</phase>
+						<goals>
+							<goal>validate-forms</goal>
+						</goals>
+						<configuration>
+							<formsDirectory>src/main/webapp/resources/htmlforms</formsDirectory>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
 		</plugins>
 	</build>
 
