--- a/pom.xml
+++ b/pom.xml
@@ -274,6 +274,11 @@
 					<version>1.0.1</version>
 				</plugin>
 				<plugin>
+					<groupId>org.openmrs.maven.plugins</groupId>
+					<artifactId>distrotools-maven-plugin</artifactId>
+					<version>0.1</version>
+				</plugin>
+				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-dependency-plugin</artifactId>
 					<version>2.4</version>
