--- a/pom.xml
+++ b/pom.xml
@@ -276,7 +276,7 @@
 				<plugin>
 					<groupId>org.openmrs.maven.plugins</groupId>
 					<artifactId>distrotools-maven-plugin</artifactId>
-					<version>0.3-SNAPSHOT</version>
+					<version>0.3</version>
 				</plugin>
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
