--- a/pom.xml
+++ b/pom.xml
@@ -41,7 +41,7 @@
 		<idgenVersion>2.6</idgenVersion>
 		<kenyacoreVersion>2.0</kenyacoreVersion>
 		<kenyadqVersion>1.1</kenyadqVersion>
-		<kenyauiVersion>2.0.2-SNAPSHOT</kenyauiVersion>
+		<kenyauiVersion>2.0.2</kenyauiVersion>
 		<logicVersion>0.5.2</logicVersion>
 		<metadatadeployVersion>1.2</metadatadeployVersion>
 		<metadatamappingVersion>1.0.1</metadatamappingVersion>
