--- a/pom.xml
+++ b/pom.xml
@@ -36,7 +36,7 @@
 		<appframeworkVersion>2.1</appframeworkVersion>
 		<calculationVersion>1.1</calculationVersion>
 		<groovyVersion>2.2.4</groovyVersion>
-		<htmlformentryVersion>2.3</htmlformentryVersion>
+		<htmlformentryVersion>2.4-SNAPSHOT</htmlformentryVersion>
 		<htmlwidgetsVersion>1.6.5</htmlwidgetsVersion>
 		<idgenVersion>2.6</idgenVersion>
 		<kenyacoreVersion>2.1-SNAPSHOT</kenyacoreVersion>
