--- a/pom.xml
+++ b/pom.xml
@@ -43,7 +43,7 @@
 		<kenyadqVersion>1.1</kenyadqVersion>
 		<kenyauiVersion>2.0.3-SNAPSHOT</kenyauiVersion>
 		<logicVersion>0.5.2</logicVersion>
-		<metadatadeployVersion>1.2</metadatadeployVersion>
+		<metadatadeployVersion>1.3-SNAPSHOT</metadatadeployVersion>
 		<metadatamappingVersion>1.0.1</metadatamappingVersion>
 		<metadatasharingVersion>1.1.8</metadatasharingVersion>
 		<reportingVersion>0.8.2</reportingVersion>
