--- a/distro/pom.xml
+++ b/distro/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.openmrs.module</groupId>
 		<artifactId>kenyaemr</artifactId>
-		<version>14.1.2</version>
+		<version>14.1.3-RC1</version>
 	</parent>
 
 	<artifactId>kenyaemr-distro</artifactId>
@@ -251,4 +251,8 @@
 		</profile>
 	</profiles>
 
+
+  <scm>
+    <tag>14.1.3-RC1</tag>
+  </scm>
 </project>
