--- a/install/pom.xml
+++ b/install/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>org.openmrs.module</groupId>
 		<artifactId>kenyaemr</artifactId>
-		<version>14.1.2</version>
+		<version>14.1.3-RC1</version>
 	</parent>
 
 	<artifactId>kenyaemr-install</artifactId>
@@ -162,4 +162,8 @@
 		</profile>
 	</profiles>
 
+
+  <scm>
+    <tag>14.1.3-RC1</tag>
+  </scm>
 </project>
