--- a/omod/pom.xml
+++ b/omod/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>org.openmrs.module</groupId>
 		<artifactId>kenyaemr</artifactId>
-		<version>14.1.2</version>
+		<version>14.1.3-RC1</version>
 	</parent>
 
 	<artifactId>kenyaemr-omod</artifactId>
@@ -173,4 +173,8 @@
 		</plugins>
 	</build>
 
+
+  <scm>
+    <tag>14.1.3-RC1</tag>
+  </scm>
 </project>
