--- a/api/pom.xml
+++ b/api/pom.xml
@@ -4,10 +4,11 @@
 	<parent>
 		<groupId>org.openmrs.module</groupId>
 		<artifactId>kenyaemr</artifactId>
-		<version>14.1.3-RC1</version>
+		<version>14.1.3-RC2-SNAPSHOT</version>
 	</parent>
 
 	<artifactId>kenyaemr-api</artifactId>
+  <version>14.1.2</version>
 	<packaging>jar</packaging>
 	<name>KenyaEMR Module API</name>
 	<description>API project for KenyaEMR Module</description>
@@ -96,9 +97,4 @@
 			<filter>${project.build.directory}/metadata.properties</filter>
 		</filters>
 	</build>
-
-
-  <scm>
-    <tag>14.1.3-RC1</tag>
-  </scm>
 </project>
