--- a/distro/pom.xml
+++ b/distro/pom.xml
@@ -5,10 +5,11 @@
 	<parent>
 		<groupId>org.openmrs.module</groupId>
 		<artifactId>kenyaemr</artifactId>
-		<version>14.1.3-RC1</version>
+		<version>14.1.3-RC2-SNAPSHOT</version>
 	</parent>
 
 	<artifactId>kenyaemr-distro</artifactId>
+  <version>14.1.2</version>
 	<packaging>pom</packaging>
 	<name>KenyaEMR Distribution (optional)</name>
 	<description>Distribution project for KenyaEMR</description>
@@ -250,9 +251,4 @@
 			</build>
 		</profile>
 	</profiles>
-
-
-  <scm>
-    <tag>14.1.3-RC1</tag>
-  </scm>
 </project>
