--- a/install/pom.xml
+++ b/install/pom.xml
@@ -4,10 +4,11 @@
 	<parent>
 		<groupId>org.openmrs.module</groupId>
 		<artifactId>kenyaemr</artifactId>
-		<version>14.1.3-RC1</version>
+		<version>14.1.3-RC2-SNAPSHOT</version>
 	</parent>
 
 	<artifactId>kenyaemr-install</artifactId>
+  <version>14.1.2</version>
 	<packaging>pom</packaging>
 	<name>KenyaEMR Installation (optional)</name>
 	<description>Installation tools for KenyaEMR</description>
@@ -161,9 +162,4 @@
 			</build>
 		</profile>
 	</profiles>
-
-
-  <scm>
-    <tag>14.1.3-RC1</tag>
-  </scm>
 </project>
