--- a/omod/pom.xml
+++ b/omod/pom.xml
@@ -4,10 +4,11 @@
 	<parent>
 		<groupId>org.openmrs.module</groupId>
 		<artifactId>kenyaemr</artifactId>
-		<version>14.1.3-RC1</version>
+		<version>14.1.3-RC2-SNAPSHOT</version>
 	</parent>
 
 	<artifactId>kenyaemr-omod</artifactId>
+  <version>14.1.2</version>
 	<packaging>jar</packaging>
 	<name>KenyaEMR Module OMOD</name>
 	<description>OMOD project for KenyaEMR Module</description>
@@ -172,9 +173,4 @@
 			</plugin>
 		</plugins>
 	</build>
-
-
-  <scm>
-    <tag>14.1.3-RC1</tag>
-  </scm>
 </project>
