--- a/distro/pom.xml
+++ b/distro/pom.xml
@@ -9,7 +9,7 @@
 	</parent>
 
 	<artifactId>kenyaemr-distro</artifactId>
-  <version>14.1.2</version>
+  <version>14.1.3-RC2-SNAPSHOT</version>
 	<packaging>pom</packaging>
 	<name>KenyaEMR Distribution (optional)</name>
 	<description>Distribution project for KenyaEMR</description>
