--- a/install/pom.xml
+++ b/install/pom.xml
@@ -8,7 +8,7 @@
 	</parent>
 
 	<artifactId>kenyaemr-install</artifactId>
-  <version>14.1.2</version>
+  <version>14.1.3-RC2-SNAPSHOT</version>
 	<packaging>pom</packaging>
 	<name>KenyaEMR Installation (optional)</name>
 	<description>Installation tools for KenyaEMR</description>
