--- a/omod/pom.xml
+++ b/omod/pom.xml
@@ -4,11 +4,11 @@
 	<parent>
 		<groupId>org.openmrs.module</groupId>
 		<artifactId>kenyaemr</artifactId>
-		<version>14.1.3</version>
+		<version>14.1.3-RC4-SNAPSHOT</version>
 	</parent>
 
 	<artifactId>kenyaemr-omod</artifactId>
-    <version>14.1.3</version>
+    <version>14.1.3-RC4-SNAPSHOT</version>
 	<packaging>jar</packaging>
 	<name>KenyaEMR Module OMOD</name>
 	<description>OMOD project for KenyaEMR Module</description>
