--- a/pom.xml
+++ b/pom.xml
@@ -35,14 +35,14 @@
 		<appframeworkVersion>2.2.1</appframeworkVersion>
 		<calculationVersion>1.1</calculationVersion>
 		<groovyVersion>2.2.4</groovyVersion>
-		<htmlformentryVersion>2.4-SNAPSHOT</htmlformentryVersion>
+		<htmlformentryVersion>2.4</htmlformentryVersion>
 		<htmlwidgetsVersion>1.6.6</htmlwidgetsVersion>
 		<idgenVersion>2.6</idgenVersion>
-		<kenyacoreVersion>2.1-SNAPSHOT</kenyacoreVersion>
+		<kenyacoreVersion>2.1</kenyacoreVersion>
 		<kenyadqVersion>1.1</kenyadqVersion>
 		<kenyauiVersion>2.0.3-SNAPSHOT</kenyauiVersion>
 		<logicVersion>0.5.2</logicVersion>
-		<metadatadeployVersion>1.3-SNAPSHOT</metadatadeployVersion>
+		<metadatadeployVersion>1.3</metadatadeployVersion>
 		<metadatamappingVersion>1.0.1</metadatamappingVersion>
 		<metadatasharingVersion>1.1.8</metadatasharingVersion>
 		<reportingVersion>0.9.2.1</reportingVersion>
