--- a/pom.xml
+++ b/pom.xml
@@ -28,8 +28,8 @@
 	</modules>
 
 	<properties>
-		<openMRSVersion>1.9.7</openMRSVersion>
-		<cielVersion>20140101</cielVersion>
+		<openMRSVersion>1.9.8</openMRSVersion>
+		<cielVersion>20141103</cielVersion>
 
 		<!-- Dependency modules -->
 		<appframeworkVersion>2.2.1</appframeworkVersion>
@@ -40,7 +40,7 @@
 		<idgenVersion>2.6</idgenVersion>
 		<kenyacoreVersion>2.1</kenyacoreVersion>
 		<kenyadqVersion>1.1</kenyadqVersion>
-		<kenyauiVersion>2.0.3-SNAPSHOT</kenyauiVersion>
+		<kenyauiVersion>2.0.3</kenyauiVersion>
 		<logicVersion>0.5.2</logicVersion>
 		<metadatadeployVersion>1.3</metadatadeployVersion>
 		<metadatamappingVersion>1.0.1</metadatamappingVersion>
