--- a/pom.xml
+++ b/pom.xml
@@ -39,7 +39,7 @@
 		<htmlwidgetsVersion>1.6.6</htmlwidgetsVersion>
 		<idgenVersion>2.6</idgenVersion>
 		<kenyacoreVersion>2.1</kenyacoreVersion>
-		<kenyadqVersion>1.1</kenyadqVersion>
+		<kenyadqVersion>1.2-SNAPSHOT</kenyadqVersion>
 		<kenyauiVersion>2.0.3</kenyauiVersion>
 		<logicVersion>0.5.2</logicVersion>
 		<metadatadeployVersion>1.3</metadatadeployVersion>
