--- a/pom.xml
+++ b/pom.xml
@@ -38,8 +38,8 @@
 		<htmlformentryVersion>2.4</htmlformentryVersion>
 		<htmlwidgetsVersion>1.6.6</htmlwidgetsVersion>
 		<idgenVersion>2.6</idgenVersion>
-		<kenyacoreVersion>2.2-SNAPSHOT</kenyacoreVersion>
-		<kenyadqVersion>1.2-SNAPSHOT</kenyadqVersion>
+		<kenyacoreVersion>2.1</kenyacoreVersion>
+		<kenyadqVersion>1.1</kenyadqVersion>
 		<kenyauiVersion>2.0.3</kenyauiVersion>
 		<logicVersion>0.5.2</logicVersion>
 		<metadatadeployVersion>1.3</metadatadeployVersion>
