--- a/install/pom.xml
+++ b/install/pom.xml
@@ -4,11 +4,11 @@
 	<parent>
 		<groupId>org.openmrs.module</groupId>
 		<artifactId>kenyaemr</artifactId>
-		<version>14.2-RC3</version>
+		<version>14.2-RC4-SNAPSHOT</version>
 	</parent>
 
 	<artifactId>kenyaemr-install</artifactId>
-  <version>14.2-RC3</version>
+  <version>14.2-RC4-SNAPSHOT</version>
 	<packaging>pom</packaging>
 	<name>KenyaEMR Installation (optional)</name>
 	<description>Installation tools for KenyaEMR</description>
