--- a/distro/pom.xml
+++ b/distro/pom.xml
@@ -5,11 +5,11 @@
 	<parent>
 		<groupId>org.openmrs.module</groupId>
 		<artifactId>kenyaemr</artifactId>
-		<version>15.1.1</version>
+		<version>16.1-SNAPSHOT</version>
 	</parent>
 
 	<artifactId>kenyaemr-distro</artifactId>
-  <version>15.1.1</version>
+  <version>16.1-SNAPSHOT</version>
 	<packaging>pom</packaging>
 	<name>KenyaEMR Distribution (optional)</name>
 	<description>Distribution project for KenyaEMR</description>
