--- a/install/pom.xml
+++ b/install/pom.xml
@@ -4,11 +4,11 @@
 	<parent>
 		<groupId>org.openmrs.module</groupId>
 		<artifactId>kenyaemr</artifactId>
-		<version>16.1-SNAPSHOT</version>
+		<version>15.1.3-RC1</version>
 	</parent>
 
 	<artifactId>kenyaemr-install</artifactId>
-  <version>16.1-SNAPSHOT</version>
+  <version>15.1.3-RC1</version>
 	<packaging>pom</packaging>
 	<name>KenyaEMR Installation (optional)</name>
 	<description>Installation tools for KenyaEMR</description>
