Downgraded KenyaUI to 2.0.4 to be able to make a quick release.

--- a/pom.xml
+++ b/pom.xml
@@ -40,7 +40,7 @@
         <idgenVersion>2.6</idgenVersion>
         <kenyacoreVersion>2.3</kenyacoreVersion>
         <kenyadqVersion>1.2</kenyadqVersion>
-        <kenyauiVersion>2.0.5-SNAPSHOT</kenyauiVersion>
+        <kenyauiVersion>2.0.4</kenyauiVersion>
         <logicVersion>0.5.2</logicVersion>
         <metadatadeployVersion>1.3</metadatadeployVersion>
         <metadatamappingVersion>1.0.1</metadatamappingVersion>
