fixes for unit tests on platform 1.12.0

--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,7 @@
 
     <properties>
         <openMRSVersion>1.12.0</openMRSVersion>
+        <openMRSMinorVersion>1.12</openMRSMinorVersion>
         <cielVersion>20150123</cielVersion>
 
         <!-- Dependency modules -->
