--- a/install/pom.xml
+++ b/install/pom.xml
@@ -15,11 +15,11 @@
 	<parent>
 		<groupId>org.openmrs.module</groupId>
 		<artifactId>kenyaemr</artifactId>
-		<version>17.0.0-beta</version>
+		<version>17.0.0</version>
 	</parent>
 
 	<artifactId>kenyaemr-install</artifactId>
-  <version>17.0.0-beta</version>
+  <version>17.0.0</version>
 	<packaging>pom</packaging>
 	<name>KenyaEMR Installation (optional)</name>
 	<description>Installation tools for KenyaEMR</description>
